k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
      nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db-service
spec:
  selector:
    app: todo-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
